// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-spinner should render loading spinner 1`] = `
<wpp-spinner aria-hidden="true" class="wpp-size-s wpp-spinner">
  <mock:shadow-root>
    <svg aria-hidden="true" class="size-s spinner" focusable="false">
      <circle cx="7" cy="7" fill="transparent" r="6" stroke="var(--wpp-primary-color-500)" stroke-linecap="round"></circle>
    </svg>
  </mock:shadow-root>
</wpp-spinner>
`;

exports[`wpp-spinner should render loading spinner with prop color and size m 1`] = `
<wpp-spinner aria-hidden="true" class="wpp-size-m wpp-spinner" color="var(--wpp-danger-color-300)" size="m">
  <mock:shadow-root>
    <svg aria-hidden="true" class="size-m spinner" focusable="false">
      <circle cx="16" cy="16" fill="transparent" r="14" stroke="var(--wpp-danger-color-300)" stroke-linecap="round"></circle>
    </svg>
  </mock:shadow-root>
</wpp-spinner>
`;
